Fix iOS image section width: add width 100% to project-card__image on mobile, remove debug outline

--- a/style.css
+++ b/style.css
@@ -900,6 +900,8 @@ a     { color: inherit; text-decoration: none; }
   .project-card__image {
     aspect-ratio: 16 / 9;
     min-height: unset;
+    width: 100%;
+    min-width: 0;
   }
 
   .project-card__image img {
@@ -916,7 +918,6 @@ a     { color: inherit; text-decoration: none; }
 
   .project-card__info {
     align-items: stretch;
-    outline: 4px solid red;
     width: 100%;
     min-width: 0;
   }
